# planar_image_calibration

./: .gitignore  LICENSE  README.md  pyproject.toml
src/planar_reconstruction/: __init__.py  app.py  cli.py  diagnostics.py  features.py  homography.py  quality.py  reconstruct.py  stream.py
src/planar_reconstruction/transformations/: __init__.py  straighten.py
src/planar_reconstruction/ui/: __init__.py  main_window.py  straighten_dialog.py
src/planar_reconstruction/ui/components/: __init__.py  image_group.py  options_group.py  paths_group.py  status_group.py  summary_group.py
tests/: test_cli_smoke.py  test_homography.py  test_quality.py
